# rust-certgen

./: Cargo.toml  LICENSE  README.md  certgen.cfg  certgen.toml
src/: cert.rs  console.rs  key.rs  main.rs
