[package]
name = "certgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"anyhow" = "1.0.86"
"openssl" = { version = "0.10.66", features = ["vendored"]}
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"